refactor#17: toList()로 수정