@@ -32,7 +32,7 @@ public record OwnerOrderDetailResponseDto(
         order.getTotalPrice(),
         order.getOrderStatus(),
         order.getOrderType(),
-        order.getOrderMenuList().stream().map(MenuDto::of).collect(toList()),
+        order.getOrderMenuList().stream().map(MenuDto::of).toList(),
         order.getCreatedAt(),
         order.getUpdatedAt(),
         order.getUpdatedBy()
@@ -48,7 +48,7 @@ public record OwnerOrderDetailResponseDto(
         order.getTotalPrice(),
         order.getOrderStatus(),
         order.getOrderType(),
-        order.getOrderMenuList().stream().map(MenuDto::of).collect(toList()),
+        order.getOrderMenuList().stream().map(MenuDto::of).toList(),
         order.getCreatedAt(),
         order.getUpdatedAt(),
         order.getUpdatedBy()
