@@ -29,7 +29,7 @@ public record OwnerOrderSummaryResponseDto(
         order.getMember().getUsername(),
         order.getTotalPrice(),
         order.getOrderStatus(),
-        order.getOrderMenuList().stream().map(MenuDto::of).collect(toList()),
+        order.getOrderMenuList().stream().map(MenuDto::of).toList(),
         order.getCreatedAt(),
         order.getUpdatedAt(),
         order.getUpdatedBy()
@@ -43,7 +43,7 @@ public record OwnerOrderSummaryResponseDto(
         order.getMember().getUsername(),
         order.getTotalPrice(),
         order.getOrderStatus(),
-        order.getOrderMenuList().stream().map(MenuDto::of).collect(toList()),
+        order.getOrderMenuList().stream().map(MenuDto::of).toList(),
         order.getCreatedAt(),
         order.getUpdatedAt(),
         order.getUpdatedBy()
